# sisal

./: .gitignore  .merlin  .ocamldebug  ERROR.dot  README  _oasis  _tags  api.odocl  b4  b4.dot  check_new_voucher_method_and_shadowed_code.sis  context_free_grammar.md  dune  dune-project  exp.dot  for_initial.sis  gen_ids.py  main.byte  mashi  mydot.dot  myocamlbuild.ml  newton_raphson.sis  ot  out.dot  out.w.dot  outs  setup.data  setup.ml  simple_tests_output.txt  snd.dot  test_8queens.sis  tst.sis  tst_loop2.sis  tst_loopX.sis  u1.sis  warns
bug_notes/: fixes.db
docs/: Rank_Polymorphism_Complete_Guide.md  broadcast_test_plan.md  einsum.md  fft_copy_elimination_report.md  forall_array_dv_lowering.md  forall_lowering_workitems.md  forall_rebuild_note.md  forall_spec.md  forall_symtab_notes.md  if1_to_c_architecture.md  runtime_rank_aware_blocks.md  runtime_usage.md  subscript_slicing_plan.md
runtime/: sisal_runtime.h
src/: .ogen  dune  main.ml  visualizer.md
src/fe/: META  README  dune  fe.mllib  lex.mll  parse.conflicts  parse.messages  parse.mly
test/: 8queens.sis  8queens.sis.out  AngMom.sis  BackTrack.sis  CpxConv.sis  CpxFuncs.sis  CpxFuncs_dv.sis  Energy.sis  Gauss.sis  IFg_2ETC.sis  IFm_4.sis  InitFFT.sis  Inital.sis  LTStep.sis  Linear.sis  MdFFTFreq.sis  MdFFTGrid.sis  PassFreq.sis  PassGrid.sis  SIFuncs.sis  Sas.sis  Spec.sis  Specam.sis  TStep.sis  UVSpec.sis  VSphere.sis  aa.sis  ada.sis  aggregate_add.sis  alphabeta.sis  anneal.sis  anneal.sish  apl_case.sis  apl_forall_mix.sis  apl_reduce.sis  apl_shape.sis  apl_sort_search.sis  apl_stats.sis  (+271 more)
(+345 files in other folders)
