(library
 (name fe)
 (public_name sisal.fe)
 (libraries unix ir menhirLib)
 (modules lex parse parse_errors))

; These lines tell Dune to run ocamllex and menhir
(ocamllex lex)
(menhir
 (modules parse)
 (flags --table --explain))

; Compile error messages file into a module
(rule
 (target parse_errors.ml)
 (deps parse.messages parse.mly)
 (action
  (with-stdout-to %{target}
   (run menhir --compile-errors %{deps}))))
